Fix z-index issues so buttons are now clickable

--- a/styles/Carousel.css
+++ b/styles/Carousel.css
@@ -154,11 +154,11 @@ ol, li {
 .carousel__prev,
 .carousel__next {
     position: absolute;
-    top: 0;
-    margin-top: 14%;
+    /*top: 0;*/
+    /*margin-top: 14%;*/
     width: 4rem;
     height: 4rem;
-    transform: translateY(-50%);
+    /*transform: translateY(-50%);*/
     border-radius: 50%;
     font-size: 0;
     outline: 0;
@@ -172,6 +172,10 @@ ol, li {
 .carousel::after,
 .carousel__next {
     right: -1rem;
+}
+
+.carousel__prev:hover, .carousel__next:hover {
+    background: violet;
 }
 
 .carousel::before,
